# neo

./: .gitignore  DEPLOYMENT.md  DOCUMENTATION_STATUS.md  Dockerfile  Makefile  README.md  docker-compose.yml  install.ps1  install.sh  pyproject.toml  run.py
.github/workflows/: ci.yml
data/: app.db
docs/: README.md
docs/diagrams/: README.md
docs/manual/: 01-introduction.md  02-installation.md  03-first-steps.md  04-system-requirements.md  05-command-interface.md  06-voice-commands.md  07-learning-systems.md  08-problem-solving.md  09-pc-control.md  10-file-management.md  11-process-management.md  12-system-monitoring.md  13-cybersecurity.md  14-penetration-testing.md  15-code-development.md  16-research-analysis.md  17-math-science.md  18-data-analysis.md  19-network-security.md  20-development-tools.md  21-personalization.md  22-custom-commands.md  23-automation-scripts.md  24-integration-setup.md  25-troubleshooting.md  26-performance.md  28-support.md  (+6 more)
scripts/: render_mermaid.py
tests/: test_ai_engine_status.py  test_chat.py  test_cognitive.py  test_cognitive_persist.py  test_cognitive_phase2.py  test_cognitive_phase34.py  test_config_schema.py  test_documentation.py  test_health.py  test_knowledge_api.py  test_knowledge_graph.py  test_knowledge_memory_api_crud.py  test_knowledge_persist_api.py  test_knowledge_status.py  test_learning_status.py  test_memory_api.py  test_memory_service.py  test_monitoring_status.py  test_neural_overview.py  test_rbac.py  test_revocation_queue.py  test_security_framework_status.py  test_status.py  test_system_arch_status.py
(+104 files in other folders)
